--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,9 @@ dependencies {
     //SwipeRefreshLayout
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
+    //Retrofit - default
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //Retrofit - gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
