--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Miggle">
+        android:theme="@style/Theme.Miggle"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"></activity>
+            android:name=".TestActivity"
+            android:label="@string/app_name">
+        </activity>
         <activity
             android:name=".SplashActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
