--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     //Retrofit - gson
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    implementation 'com.google.android.material:material:1.4.0'
+
 }
