--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:theme="@style/Theme.Miggle"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
             android:name=".TestActivity"
             android:label="@string/app_name">
         </activity>
